# openMVS

./: .gitignore
apps/: CMakeLists.txt
apps/DensifyPointCloud/: DensifyPointCloud.cpp
apps/DownsamplePointcloud/: .DownsamplePointcloud.cpp.swp  CMakeLists.txt  DownsamplePointcloud.cpp
apps/LoadDecimatedMesh/: CMakeLists.txt  LoadDecimatedMesh.cpp
apps/LoadMesh/: CMakeLists.txt  LoadMesh.cpp
apps/LoadPointcloud/: CMakeLists.txt  LoadPointcloud.cpp
apps/MergeScene/: CMakeLists.txt  MergeScene.cpp
apps/PoissonMesh/: CMakeLists.txt  PoissonMesh.cpp
apps/SplitScene/: CMakeLists.txt  SplitScene.cpp
apps/TextureMesh/: TextureMesh.cpp
libs/Common/: Common.h  Hash.h
libs/IO/: PLY.cpp
libs/MVS/: CMakeLists.txt  DepthMap.cpp  Mesh.cpp  Mesh.h  PointCloud.cpp  PointCloud.h  Scene.cpp  SceneDensify.cpp  SceneRefine.cpp  SceneTexture.cpp
